# funread

./: .gitignore  =1.74.0  README.md  pyproject.toml  setup.py
.github/workflows/: sync.yml
example/: run.py  run1.py  run3.py
funread/legado/manage/book/: format.py
funread/legado/manage/download/: __init__.py  base.py  generate.py  rss.py
funread/scripts/: command.py
funread/web/page/: video.py  video_list.py
funread/web/parse/: base.py
src/funread/legado/manage/: __init__.py  entrance.py  rss.py  source_download.py
src/funread/legado/manage/download/: __init__.py  base.py  book.py  context.py  generate.py  rss.py  task.py
src/funread/legado/manage/download/core/: __init__.py  constants.py  processor.py  store.py
src/funread/legado/manage/download/pipeline/: __init__.py  backup.py  base.py  context.py  fetch.py  publish.py  restore.py  task.py  upload.py
src/funread/legado/manage/download/reporting/: __init__.py  builder.py  remote.py
src/funread/legado/manage/download/sources/: __init__.py  book.py  factory.py  rss.py
src/funread/legado/manage/publish/: __init__.py  entrance.py  rss.py
src/funread/legado/manage/source/: __init__.py  storage.py
src/funread/legado/manage/source/merge/: __init__.py  task.py
src/funread/legado/manage/source/sync/: __init__.py  task.py
src/funread/legado/manage/utils/: __init__.py  core.py
src/funread/scripts/: command.py
src/funread/web/parse/: video.py
tests/: test_download_base.py  test_source_download_storage.py
