[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "funread"
version = "1.0.3"
description = ""
authors = [ "farfun <1007530194@qq.com>",]
readme = "README.md"
[[tool.poetry.packages]]
from = "src"
include = "*"

[tool.poetry.dependencies]
python = "^3.8"
dominate = "^2.9.1"
funfile = "^1.0.3"
